Updated packages. Fixed layout issues.

--- a/src/scss/widget/_widget-theme.scss
+++ b/src/scss/widget/_widget-theme.scss
@@ -51,6 +51,7 @@
 .kw-footer {
    display: flex;
    margin: 0 16px;
+   padding-bottom: 12px;
 }
 
 .kw-button {
